--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_myicon_new"
-        android:label="@string/app_name"
+        android:label="앨범단가산출기"
         android:roundIcon="@mipmap/ic_myicon_new_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AlbumCalc"
